--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             else if(data.weather[0].main == 'Mist'){
                 weatherIcon.src = "images/mist.png";
             }
+            else{
+                 weatherIcon.src = "images/clear.png";
+            }
             document.querySelector(".weather").style.display = "block";
             document.querySelector(".error").style.display = "none";
 
